--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,50 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My profile</h2>
+    <p th:text="${name}">name</p>
+    <p th:text="${skintype}">skinType</p>
+    <p th:text="${manipedi}">manipedi</p>
 </div>
+
 <div id = "servicesMenu">
+    <h1>Menu of Available Services</h1>
+    <h2>Facial Treatments</h2>
+    <p>The facial treatments below are recommended by our estheticians for your given skin type.</p>
+    <table>
+        <tr th:each="facials : ${appropriateFacials}">
+            <td th:text="${facials}"></td>
+        </tr>
+    </table>
+    <div th:if="${manipedi == 'manicure'}">
+        <h3>Manicure</h3>
+        <p th:replace="fragments :: manicureDescription"></p>
+    </div>
+    <div th:if="${manipedi == 'pedicure'}">
+        <h3>Pedicure</h3>
+        <p th:replace="fragments :: pedicureDescription"></p>
+    </div>
+</div>
+<div class="footer">
+    <div class="square">
+    </div>
+    <div class="square3">
+    </div>
+    <div class="square4">
+    </div>
+    <div class="square5">
+    </div>
+    <div class="square6">
+    </div>
+    <div class="square7">
+    </div>
+    <div class="square8">
+    </div>
+    <div class="square9">
+    </div>
+    <div class="square10">
+    </div>
+
 </div>
 </body>
 </html>
